--- a/telegram-bot-message-dsl.cabal
+++ b/telegram-bot-message-dsl.cabal
@@ -20,6 +20,19 @@ library
       Paths_telegram_bot_message_dsl
   hs-source-dirs:
       src
+  default-extensions:
+      TypeOperators
+      TypeApplications
+      StandaloneKindSignatures
+      FunctionalDependencies
+      NoStarIsType
+      DerivingVia
+      DerivingStrategies
+      GADTs
+      DefaultSignatures
+      TypeFamilies
+      DataKinds
+      PolyKinds
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
       base
@@ -27,4 +40,4 @@ library
     , tagged
     , telegram-bot-api
     , text
-  default-language: Haskell2010
+  default-language: GHC2021
