--- a/telegram-bot-message-dsl.cabal
+++ b/telegram-bot-message-dsl.cabal
@@ -13,9 +13,6 @@ build-type:     Simple
 library
   exposed-modules:
       Telegram.Bot.DSL
-      Telegram.Bot.DSL.TaggedContext
-      Telegram.Bot.DSL.Message
-  other-modules:
       Telegram.Bot.DSL.Classes.HasTaggedContext
       Telegram.Bot.DSL.Classes.IsCallbackData
       Telegram.Bot.DSL.Classes.IsUnit
@@ -25,11 +22,14 @@ library
       Telegram.Bot.DSL.Components.Message
       Telegram.Bot.DSL.Components.MessageLine
       Telegram.Bot.DSL.Components.TextLine
+      Telegram.Bot.DSL.Conversions.AsMessage
       Telegram.Bot.DSL.Conversions.AsMessageLine
       Telegram.Bot.DSL.Conversions.AsTextLine
+      Telegram.Bot.DSL.Message
       Telegram.Bot.DSL.Parsing
-      Telegram.Bot.DSL.Utils.FromEitherError
+      Telegram.Bot.DSL.TaggedContext
       Telegram.Bot.DSL.Utils.RenameTag
+  other-modules:
       Paths_telegram_bot_message_dsl
   hs-source-dirs:
       src
